--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,8 @@ RAZORPAY_PLAN_PRO=plan_pro_id
 # Optional: Redis for caching (Railway Redis add-on)
 # REDIS_URL=redis://default:password@host:port
 
+# Optional: Anthropic Claude API for AI Chat feature
+# ANTHROPIC_API_KEY=sk-ant-your-api-key-here
+
 # CORS (comma-separated origins)
 CORS_ORIGINS=["http://localhost:3000","https://your-frontend.vercel.app"]
